--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs",
+  "name": "states",
   "version": "1.0.0",
   "scripts": {
     "dev": "next",
@@ -9,10 +9,25 @@
   },
   "dependencies": {
     "next": "latest",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "ramda": "0.27.1",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-redux": "7.2.2",
+    "redux": "4.0.5",
+    "redux-devtools-extension": "2.13.8",
+    "redux-logger": "3.0.6",
+    "redux-thunk": "2.3.0",
+    "styled-components": "5.2.1"
+  },
+  "devDependencies": {
+    "@next/bundle-analyzer": "^9.5.2",
+    "@babel/core": "^7.0.0",
+    "babel-plugin-inline-react-svg": "1.1.1",
+    "babel-plugin-styled-components": "^1.8.0"
   },
   "license": "MIT",
-  "keywords": ["next"],
+  "keywords": [
+    "next"
+  ],
   "description": "A \"Hello World\" application with multiple pages that shows how Next.js routing works."
 }
